# NEURA

./: .gitignore  .replit  CHANGELOG.md  LICENSE  README.md  package-lock.json  package.json  replit.md  tsconfig.json
.github/workflows/: ci.yml  release.yml
benchmarks/: audioEngine.bench.ts
core/audio/: AudioEngine.ts  MockAudioEngine.ts  NativeAudioEngine.ts  TauriAudioEngine.ts  resolveAudioEngine.ts
core/player/: PlayerController.ts  reducer.ts  store.ts  types.ts
core/utils/: EventEmitter.ts
docs/: desktop-tauri-audio-engine.md  engine-comparison.md  mobile-checklist.md  pre-release-checklist.md  sequence-events.md  signing-notes.md  tauri-native-engine.md  tauri-v2-integration.md
examples/: minimal.ts  native_adapter_usage.ts
scripts/: build-desktop.ps1  build-desktop.sh  dev-desktop.ps1  dev-desktop.sh  verify-plugin.ps1  verify-plugin.sh
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
tauri-plugin-neura-audio/: Cargo.toml
tauri-plugin-neura-audio/src/: lib.rs
tests/: TauriAudioEngine.basic.ts
ui/: index.html  styles.css  tsconfig.json  vite.config.ts
ui/src/: main.tsx  types.ts
ui/src/modules/: ModeSelector.tsx  PlayerControls.tsx  ProgressBar.tsx  StatusBar.tsx  TrackInfo.tsx  TrackList.tsx  Visualizer.tsx  VolumeControl.tsx
