[package]
name = "tauri-plugin-neura-audio"
version = "0.1.0"
edition = "2021"

[lib]
name = "tauri_plugin_neura_audio"
path = "src/lib.rs"

[dependencies]
tauri = { version = "2", features = ["macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
rodio = { version = "0.17", default-features = false, features = ["symphonia"] }
symphonia = { version = "0.5", features = ["aac","mp3","flac","ogg","vorbis","wav","isomp4","mkv"] }
cpal = "0.15"
parking_lot = "0.12"
crossbeam-channel = "0.5"
